Made the input fields proportional on the sign in page. No longer too long

--- a/app/assets/stylesheets/modules/forms.css.scss
+++ b/app/assets/stylesheets/modules/forms.css.scss
@@ -55,6 +55,19 @@
   border-radius: 5px;    
 }
 
+
+
+.signin-form{
+  margin: 0 auto;
+  width:85%;
+  margin-bottom: 1em;
+}
+
+#signin-box{
+  margin: 0 auto;
+  max-width: 500px;
+}
+
 .newanswer, .newquestion {
   .form-control {
     width: 97%;
